--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,17 +33,43 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Du_An_1_SD19310
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Users\\ADMIN\\Desktop\\QR-Code-em-Java-master\\QR-Code-em-Java-master\\lib\\AbsoluteLayout.jar
+file.reference.bridj-0.6.2-windows-only.jar=C:\\Users\\ADMIN\\Desktop\\QR-Code-em-Java-master\\QR-Code-em-Java-master\\lib\\bridj-0.6.2-windows-only.jar
+file.reference.commons-codec-1.10.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\commons-codec-1.10.jar
+file.reference.commons-collections4-4.1.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\commons-collections4-4.1.jar
+file.reference.commons-io-2.16.1-javadoc.jar=C:\\Users\\ADMIN\\Desktop\\commons-io-2.16.1-bin\\commons-io-2.16.1\\commons-io-2.16.1-javadoc.jar
+file.reference.commons-io-2.16.1-sources.jar=C:\\Users\\ADMIN\\Desktop\\commons-io-2.16.1-bin\\commons-io-2.16.1\\commons-io-2.16.1-sources.jar
+file.reference.commons-io-2.16.1-test-sources.jar=C:\\Users\\ADMIN\\Desktop\\commons-io-2.16.1-bin\\commons-io-2.16.1\\commons-io-2.16.1-test-sources.jar
+file.reference.commons-io-2.16.1-tests.jar=C:\\Users\\ADMIN\\Desktop\\commons-io-2.16.1-bin\\commons-io-2.16.1\\commons-io-2.16.1-tests.jar
+file.reference.commons-io-2.16.1.jar=C:\\Users\\ADMIN\\Desktop\\commons-io-2.16.1-bin\\commons-io-2.16.1\\commons-io-2.16.1.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\commons-logging-1.2.jar
+file.reference.core-3.3.0.jar=C:\\Users\\ADMIN\\Desktop\\QR-Code-em-Java-master\\QR-Code-em-Java-master\\lib\\core-3.3.0.jar
+file.reference.curvesapi-1.04.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\curvesapi-1.04.jar
 file.reference.filters-2.0.235.jar=E:\\raven-project-main\\raven-project-main\\filters-2.0.235.jar
 file.reference.filters-2.0.235.jar-1=C:\\Users\\ADMIN\\Desktop\\filters-2.0.235.jar
+file.reference.javase-3.3.0.jar=C:\\Users\\ADMIN\\Desktop\\QR-Code-em-Java-master\\QR-Code-em-Java-master\\lib\\javase-3.3.0.jar
+file.reference.junit-4.12.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\junit-4.12.jar
+file.reference.log4j-1.2.17.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\log4j-1.2.17.jar
+file.reference.log4j-1.2.17.jar-1=C:\\Users\\ADMIN\\Desktop\\QR-Code-em-Java-master\\QR-Code-em-Java-master\\lib\\log4j-1.2.17.jar
 file.reference.lombok.jar=D:\\DA1\\lombok.jar
 file.reference.miglayout-4.0.jar=miglayout-4.0.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar=C:\\TutorJava2\\mssql-jdbc-12.2.0.jre11.jar
+file.reference.poi-3.17.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\poi-3.17.jar
+file.reference.poi-examples-3.17.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\poi-examples-3.17.jar
+file.reference.poi-excelant-3.17.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\poi-excelant-3.17.jar
+file.reference.poi-ooxml-3.17.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\poi-ooxml-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\poi-ooxml-schemas-3.17.jar
+file.reference.poi-scratchpad-3.17.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\poi-scratchpad-3.17.jar
+file.reference.slf4j-api-1.6.2.jar=C:\\Users\\ADMIN\\Desktop\\QR-Code-em-Java-master\\QR-Code-em-Java-master\\lib\\slf4j-api-1.6.2.jar
+file.reference.slf4j-log4j12-1.6.2.jar=C:\\Users\\ADMIN\\Desktop\\QR-Code-em-Java-master\\QR-Code-em-Java-master\\lib\\slf4j-log4j12-1.6.2.jar
 file.reference.swing-worker-1.1.jar=E:\\raven-project-main\\raven-project-main\\swing-worker-1.1.jar
 file.reference.swing-worker-1.1.jar-1=C:\\Users\\ADMIN\\Desktop\\swing-worker-1.1.jar
 file.reference.swingx-1.6.1.jar=E:\\raven-project-main\\raven-project-main\\swingx-1.6.1.jar
 file.reference.swingx-1.6.1.jar-1=C:\\Users\\ADMIN\\Desktop\\swingx-1.6.1.jar
 file.reference.TimingFramework-0.55.jar=TimingFramework-0.55.jar
 file.reference.TimingFramework-0.55.jar-1=C:\\Users\\ADMIN\\Desktop\\swing-search-textfield-animation-main\\swing-search-textfield-animation-main\\TimingFramework-0.55.jar
+file.reference.webcam-capture-0.3.12.jar=C:\\Users\\ADMIN\\Desktop\\QR-Code-em-Java-master\\QR-Code-em-Java-master\\lib\\webcam-capture-0.3.12.jar
+file.reference.xmlbeans-2.6.0.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -57,7 +83,33 @@ javac.classpath=\
     ${file.reference.swingx-1.6.1.jar-1}:\
     ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
     ${file.reference.lombok.jar}:\
-    ${file.reference.TimingFramework-0.55.jar-1}
+    ${file.reference.TimingFramework-0.55.jar-1}:\
+    ${file.reference.commons-io-2.16.1.jar}:\
+    ${file.reference.commons-io-2.16.1-javadoc.jar}:\
+    ${file.reference.commons-io-2.16.1-sources.jar}:\
+    ${file.reference.commons-io-2.16.1-tests.jar}:\
+    ${file.reference.commons-io-2.16.1-test-sources.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar}:\
+    ${file.reference.poi-scratchpad-3.17.jar}:\
+    ${file.reference.poi-ooxml-3.17.jar}:\
+    ${file.reference.poi-excelant-3.17.jar}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.curvesapi-1.04.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.poi-examples-3.17.jar}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.bridj-0.6.2-windows-only.jar}:\
+    ${file.reference.core-3.3.0.jar}:\
+    ${file.reference.javase-3.3.0.jar}:\
+    ${file.reference.log4j-1.2.17.jar-1}:\
+    ${file.reference.slf4j-api-1.6.2.jar}:\
+    ${file.reference.slf4j-log4j12-1.6.2.jar}:\
+    ${file.reference.webcam-capture-0.3.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
