--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.output=${dist.jlink.dir}/Du_An_1_SD19310
 excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\ADMIN\\Desktop\\QR-Code-em-Java-master\\QR-Code-em-Java-master\\lib\\AbsoluteLayout.jar
 file.reference.bridj-0.6.2-windows-only.jar=C:\\Users\\ADMIN\\Desktop\\QR-Code-em-Java-master\\QR-Code-em-Java-master\\lib\\bridj-0.6.2-windows-only.jar
+file.reference.bridj-0.7.0.jar=C:\\Users\\ADMIN\\Desktop\\QuanLyKhoDienThoai-main\\QuanLyKhoDienThoai-main\\lib\\bridj-0.7.0.jar
 file.reference.commons-codec-1.10.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\commons-codec-1.10.jar
 file.reference.commons-collections4-4.1.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\commons-collections4-4.1.jar
 file.reference.commons-io-2.16.1-javadoc.jar=C:\\Users\\ADMIN\\Desktop\\commons-io-2.16.1-bin\\commons-io-2.16.1\\commons-io-2.16.1-javadoc.jar
@@ -44,9 +45,12 @@ file.reference.commons-io-2.16.1-tests.jar=C:\\Users\\ADMIN\\Desktop\\commons-io
 file.reference.commons-io-2.16.1.jar=C:\\Users\\ADMIN\\Desktop\\commons-io-2.16.1-bin\\commons-io-2.16.1\\commons-io-2.16.1.jar
 file.reference.commons-logging-1.2.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\commons-logging-1.2.jar
 file.reference.core-3.3.0.jar=C:\\Users\\ADMIN\\Desktop\\QR-Code-em-Java-master\\QR-Code-em-Java-master\\lib\\core-3.3.0.jar
+file.reference.core-3.3.0.jar-1=C:\\Users\\ADMIN\\Desktop\\QuanLyKhoDienThoai-main\\QuanLyKhoDienThoai-main\\lib\\core-3.3.0.jar
 file.reference.curvesapi-1.04.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\curvesapi-1.04.jar
 file.reference.filters-2.0.235.jar=E:\\raven-project-main\\raven-project-main\\filters-2.0.235.jar
 file.reference.filters-2.0.235.jar-1=C:\\Users\\ADMIN\\Desktop\\filters-2.0.235.jar
+file.reference.flatlaf-3.0.jar=C:\\Users\\ADMIN\\Desktop\\QuanLyKhoDienThoai-main\\QuanLyKhoDienThoai-main\\lib\\flatlaf-3.0.jar
+file.reference.itextpdf-5.5.12.jar=C:\\Users\\ADMIN\\Desktop\\QuanLyKhoDienThoai-main\\QuanLyKhoDienThoai-main\\lib\\itextpdf-5.5.12.jar
 file.reference.javase-3.3.0.jar=C:\\Users\\ADMIN\\Desktop\\QR-Code-em-Java-master\\QR-Code-em-Java-master\\lib\\javase-3.3.0.jar
 file.reference.junit-4.12.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\junit-4.12.jar
 file.reference.log4j-1.2.17.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\log4j-1.2.17.jar
@@ -109,7 +113,11 @@ javac.classpath=\
     ${file.reference.log4j-1.2.17.jar-1}:\
     ${file.reference.slf4j-api-1.6.2.jar}:\
     ${file.reference.slf4j-log4j12-1.6.2.jar}:\
-    ${file.reference.webcam-capture-0.3.12.jar}
+    ${file.reference.webcam-capture-0.3.12.jar}:\
+    ${file.reference.bridj-0.7.0.jar}:\
+    ${file.reference.core-3.3.0.jar-1}:\
+    ${file.reference.flatlaf-3.0.jar}:\
+    ${file.reference.itextpdf-5.5.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
