--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,6 +52,7 @@ file.reference.filters-2.0.235.jar-1=C:\\Users\\ADMIN\\Desktop\\filters-2.0.235.
 file.reference.flatlaf-3.0.jar=C:\\Users\\ADMIN\\Desktop\\QuanLyKhoDienThoai-main\\QuanLyKhoDienThoai-main\\lib\\flatlaf-3.0.jar
 file.reference.itextpdf-5.5.12.jar=C:\\Users\\ADMIN\\Desktop\\QuanLyKhoDienThoai-main\\QuanLyKhoDienThoai-main\\lib\\itextpdf-5.5.12.jar
 file.reference.javase-3.3.0.jar=C:\\Users\\ADMIN\\Desktop\\QR-Code-em-Java-master\\QR-Code-em-Java-master\\lib\\javase-3.3.0.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\ADMIN\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.junit-4.12.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\junit-4.12.jar
 file.reference.log4j-1.2.17.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\log4j-1.2.17.jar
 file.reference.log4j-1.2.17.jar-1=C:\\Users\\ADMIN\\Desktop\\QR-Code-em-Java-master\\QR-Code-em-Java-master\\lib\\log4j-1.2.17.jar
@@ -117,7 +118,8 @@ javac.classpath=\
     ${file.reference.bridj-0.7.0.jar}:\
     ${file.reference.core-3.3.0.jar-1}:\
     ${file.reference.flatlaf-3.0.jar}:\
-    ${file.reference.itextpdf-5.5.12.jar}
+    ${file.reference.itextpdf-5.5.12.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
