--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,6 +46,7 @@ file.reference.commons-io-2.16.1.jar=C:\\Users\\ADMIN\\Desktop\\commons-io-2.16.
 file.reference.commons-logging-1.2.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\commons-logging-1.2.jar
 file.reference.core-3.3.0.jar=C:\\Users\\ADMIN\\Desktop\\QR-Code-em-Java-master\\QR-Code-em-Java-master\\lib\\core-3.3.0.jar
 file.reference.core-3.3.0.jar-1=C:\\Users\\ADMIN\\Desktop\\QuanLyKhoDienThoai-main\\QuanLyKhoDienThoai-main\\lib\\core-3.3.0.jar
+file.reference.core-3.4.0-javadoc.jar=C:\\Users\\ADMIN\\Desktop\\core-3.4.0-javadoc.jar
 file.reference.curvesapi-1.04.jar=C:\\Users\\ADMIN\\Desktop\\lib\\lib\\curvesapi-1.04.jar
 file.reference.filters-2.0.235.jar=E:\\raven-project-main\\raven-project-main\\filters-2.0.235.jar
 file.reference.filters-2.0.235.jar-1=C:\\Users\\ADMIN\\Desktop\\filters-2.0.235.jar
@@ -119,7 +120,8 @@ javac.classpath=\
     ${file.reference.core-3.3.0.jar-1}:\
     ${file.reference.flatlaf-3.0.jar}:\
     ${file.reference.itextpdf-5.5.12.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.core-3.4.0-javadoc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
